# carrental

car-rental/: Dockerfile  car-rental.cabal  docker-compose.yml  stack.yaml
car-rental/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
car-rental/src/: Main.hs
car-rental/static/: index.html
